--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,6 +11,8 @@
 </head>
 <body>
     <div class="container my-5">
+        <div class="title">Timer</div>
+	    <p id="demo"></p>
         <div class="container" id="message-container"></div>
        
             <form id="send-container">
