--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -14,4 +14,12 @@ form{
     overflow-y: scroll;
     overflow-x: hidden;
 }
- 
+body{
+    background-color: antiquewhite;
+}
+.btn.btn-success{
+    font-family: 'Jura';
+}
+#message-input{
+    font-family: 'Jura';
+}
