--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -7,6 +7,7 @@
     <title>Chat with mental health experts- Cyberheal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Baloo+Bhaijaan+2&family=Cinzel&family=Dancing+Script&family=IBM+Plex+Serif:wght@300&family=Josefin+Slab:wght@100;400&family=Julius+Sans+One&family=Jura:wght@600;700&family=Patua+One&family=Tajawal:wght@300&family=Tangerine&family=Titillium+Web:wght@300&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
