--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
+    <h1>Chat & Consult</h1>
     <div class="container my-5">
-        <div class="title">Timer</div>
+        <div class="title"><div id = "clock" onload="currentTime()"></div></div>
 	    <p id="demo"></p>
         <div class="container" id="message-container"></div>
        
