--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,7 +11,45 @@
     <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
+    <nav>
+        <div class='logo'>CYBERHEAL</div>
+        <div class='link-box'>
+        
+        <div class='link-item'>
+        <div class='link'>Home</div>
+        <a href="#" class="link-icon"><i class="fas fa-home"></i></a>
+        </div>
+       
+         <div class='link-item'>
+        <div class='link'>Services</div>
+        <a  href="#"class="link-icon"><i class="fas fa-concierge-bell"></i></a>
+        </div>
+        
+          <div class='link-item'>
+        <div class='link'>About</div>
+        <a  href="#" class="link-icon"><i class="fas fa-info-circle"></i></a>
+        </div>
+        
+          <div class='link-item'>
+        <div class='link'>Contact</div>
+        <a href="#" class="link-icon"><i class="fas fa-envelope"></i></a>
+        </div>
+       
+        </div>
+        <div class='mob-box'>
+        <div class='mob-icon'>
+         <i class="fas fa-bars bar"></i>
+        </div>
+        
+        </div>
+        
+        
+      </nav>
+    <div class="chatstart">
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_zsr8ypxh.json"  background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop  autoplay></lottie-player>
     <h1>Chat & Consult</h1>
+    </div>
     <div class="container my-5">
         <div class="title"><div id = "clock" onload="currentTime()"></div></div>
 	    <p id="demo"></p>
@@ -20,11 +58,67 @@
             <form id="send-container">
                 <input type="text" class="form-control" name="message" id="message-input" aria-describedby="emailHelp">
                 <button type="submit" class="btn btn-success" id=""send-button>Send</button>    
-            </form>
-        
-        
-       
+            </form>   
     </div>
+
+    <!----footer--->
+<div class="container"></div>
+<footer>
+  <!-- Footer main -->
+  <section class="ft-main">
+    <div class="ft-main-item">
+      <h2 class="ft-title">About</h2>
+      <ul>
+        <li><a href="#">Services</a></li>
+        
+        <li><a href="#">Customers</a></li>
+        <li><a href="#">Careers</a></li>
+      </ul>
+    </div>
+    <div class="ft-main-item">
+      <h2 class="ft-title">Resources</h2>
+      <ul>
+        
+        <li><a href="#">Blog</a></li>
+        
+        <li><a href="#">Webinars</a></li>
+      </ul>
+    </div>
+    <div class="ft-main-item">
+      <h2 class="ft-title">Contact</h2>
+      <ul>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Email</a></li>
+        
+      </ul>
+    </div>
+    
+  </section>
+
+  <!-- Footer social -->
+  <section class="ft-social">
+    <ul class="ft-social-list">
+      <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fab fa-github"></i></a></li>
+      <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+      <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+    </ul>
+  </section>
+
+  <!-- Footer legal -->
+  <section class="ft-legal">
+    <ul class="ft-legal-list">
+      <li><a href="#">Terms &amp; Conditions</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+      <li>&copy; 2021 by Meow Media, LLC</li>
+    </ul>
+  </section>
+</footer>
+
+
+<script src="main.js"></script>
     <script src="http://localhost:1000/socket.io/socket.io.js"></script>
     <script defer src="chat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
